# llm-inference-platform

./: README.md
model/: README.md  pyproject.toml
model/model/: __init__.py
server/: Cargo.toml  README.md
server/src/: main.rs  router.rs
server/src/router/: api.rs
server/src/router/api/: v1.rs
