[project]
name = "model"
version = "0.1.0"
description = "Model ONNX converter."
readme = "README.md"
authors = [
    { name = "Keith Dao", email = "keith.dao.248@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
model = "model:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
