[project]
name = "model"
version = "0.1.0"
description = "Model ONNX converter."
readme = "README.md"
authors = [
    { name = "Keith Dao", email = "keith.dao.248@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "transformers>=4.57.6",
]

[project.scripts]
model = "model:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
cpu = [
    "optimum-onnx[onnxruntime]>=0.1.0",
]
gpu = [
    "accelerate>=1.13.0",
    "optimum-onnx[onnxruntime-gpu]>=0.1.0",
]
